# Citadel-Secure-Password-Manager

./: .gitignore  CMakeLists.txt  README.md
src/: clipboard.c  clipboard.h  crypto.c  crypto.h  main.c  security.c  security.h  ui.c  ui.h  vault.c  vault.h
